2 этап(iter 56)