@@ -4,6 +4,7 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import ru.practicum.dto.ViewStatsDto;
 import ru.practicum.enums.EveState;
 import ru.practicum.enums.StateAction;
 import ru.practicum.event.controller.StatClient;
@@ -76,56 +77,76 @@ public class EventServiceImpl implements EventService {
 
     @Override
     public List<EventShortDtoOut> getPublicEvent(String text, Long[] categories, Boolean paid, String rangeStart, String rangeEnd, Boolean onlyAvailable, String sort, Integer from, Integer size) {
-        statsClient.sendHit();
-        String lowText = text.toLowerCase();
-        lowText = lowText.replace("\"", "");
+        log.info("getPublicEvent called with parameters: text='{}', categories={}, paid={}, rangeStart={}, rangeEnd={}, onlyAvailable={}, sort={}, from={}, size={}",
+                text, categories, paid, rangeStart, rangeEnd, onlyAvailable, sort, from, size);
+
+        String lowText = text.toLowerCase().replace("\"", "");
+
         List<Event> events;
-        //сначала делаем выборку по датам и содержанию текста
         if (rangeStart != null && rangeEnd != null) {
             if (parseDate(rangeStart).isAfter(parseDate(rangeEnd))) {
                 throw new BadRequestException("Дата начала события позже даты конца события!");
             }
             events = eventRepository.getPublicEventByTextAndStartAndEnd(lowText, parseDate(rangeStart), parseDate(rangeEnd));
-        } else if (rangeStart != null && rangeEnd == null) {
+        } else if (rangeStart != null) {
             events = eventRepository.getPublicEventByTextAndStart(lowText, parseDate(rangeStart));
-        } else if (rangeStart == null && rangeEnd != null) {
+        } else if (rangeEnd != null) {
             events = eventRepository.getPublicEventByTextAndEnd(lowText, parseDate(rangeEnd));
         } else {
             events = eventRepository.getPublicEventByText(lowText);
         }
-        //фильтруем по оплате
+
+        // Фильтр по оплате
         List<Event> firstEvents;
         if (paid != null) {
-            firstEvents = events.stream().filter(event -> event.getPaid().equals(paid)).toList();
+            firstEvents = events.stream().filter(event -> event.getPaid() != null && event.getPaid().equals(paid)).toList();
+
         } else {
             firstEvents = events;
         }
-        //фильтруем по лимиту запросов на участие
+
+        // Фильтр по доступности
         List<Long> ids;
-        if (onlyAvailable) {
-            List<EventDtoOut> nextEvents = firstEvents.stream().map(eventMapper::mapEventToEventDtoOut).toList();
-            ids = nextEvents.stream().filter(eventDtoOut -> eventDtoOut.getConfirmedRequests() < eventDtoOut.getParticipantLimit())
-                    .map(EventDtoOut::getId).toList();
+        if (onlyAvailable != null && onlyAvailable) {
+            List<EventDtoOut> nextEvents = firstEvents.stream()
+                    .map(eventMapper::mapEventToEventDtoOut)
+                    .toList();
+            ids = nextEvents.stream()
+                    .filter(eventDtoOut -> eventDtoOut.getConfirmedRequests() != null
+                            && eventDtoOut.getParticipantLimit() != null
+                            && eventDtoOut.getConfirmedRequests() < eventDtoOut.getParticipantLimit())
+                    .map(EventDtoOut::getId)
+                    .toList();
         } else {
             ids = firstEvents.stream().map(Event::getId).toList();
         }
-        //фильтруем по категориям
-        if (categories != null) {
-            //сразу делаем сортировку и выборку
-            if (sort != null && sort.equals("EVENT_DATE")) {
-                return eventRepository.getEventsSortDateAndCategory(ids, categories, from, size).stream().map(eventMapper::mapEventToEventShortDtoOut).toList();
+
+        // Фильтр по категориям и сортировка
+        List<EventShortDtoOut> result;
+        if (categories != null && categories.length > 0) {
+            if ("EVENT_DATE".equals(sort)) {
+                result = eventRepository.getEventsSortDateAndCategory(ids, categories, from, size).stream()
+                        .map(eventMapper::mapEventToEventShortDtoOut)
+                        .toList();
             } else {
-                return eventRepository.getEventsSortViewsAndCategory(ids, categories, from, size).stream().map(eventMapper::mapEventToEventShortDtoOut)
-                        .sorted(Comparator.comparing(EventShortDtoOut::getViews, Comparator.nullsLast(Comparator.naturalOrder())).reversed()).toList();
+                result = eventRepository.getEventsSortViewsAndCategory(ids, categories, from, size).stream()
+                        .map(eventMapper::mapEventToEventShortDtoOut)
+                        .sorted(Comparator.comparing(EventShortDtoOut::getViews, Comparator.nullsLast(Comparator.naturalOrder())).reversed())
+                        .toList();
             }
         } else {
-            if (sort != null && sort.equals("EVENT_DATE")) {
-                return eventRepository.getEventsSortDate(ids, from, size).stream().map(eventMapper::mapEventToEventShortDtoOut).toList();
+            if ("EVENT_DATE".equals(sort)) {
+                result = eventRepository.getEventsSortDate(ids, from, size).stream()
+                        .map(eventMapper::mapEventToEventShortDtoOut)
+                        .toList();
             } else {
-                return eventRepository.getEventsSortViews(ids, from, size).stream().map(eventMapper::mapEventToEventShortDtoOut)
-                        .sorted(Comparator.comparing(EventShortDtoOut::getViews, Comparator.nullsLast(Comparator.naturalOrder())).reversed()).toList();
+                result = eventRepository.getEventsSortViews(ids, from, size).stream()
+                        .map(eventMapper::mapEventToEventShortDtoOut)
+                        .sorted(Comparator.comparing(EventShortDtoOut::getViews, Comparator.nullsLast(Comparator.naturalOrder())).reversed())
+                        .toList();
             }
         }
+        return result;
     }
 
 
@@ -134,9 +155,8 @@ public class EventServiceImpl implements EventService {
         Event event = eventRepository.getPublicEventById(eventId)
                 .orElseThrow(() -> new NotFoundException("Event with id=" + eventId + " was not found"));
         if (event.getState().equals(EveState.PUBLISHED)) {
-            statsClient.sendHitId(eventId);
             try {
-                Thread.sleep(1000); // Задержка 1 секунда для синхронизации
+                Thread.sleep(1000);
             } catch (InterruptedException e) {
                 Thread.currentThread().interrupt();
                 throw new RuntimeException("Ошибка задержки: " + e.getMessage(), e);
@@ -146,8 +166,16 @@ public class EventServiceImpl implements EventService {
         String start = eventDtoOut.getCreatedOn();
         String end = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
         String[] uris = {"/events/" + event.getId()};
-        eventDtoOut.setViews(statsClient.getHits(start, end, uris, true).getFirst().getHits());
+
+        List<ViewStatsDto> stats = statsClient.getHits(start, end, uris, true);
+
+        if (stats != null && !stats.isEmpty()) {
+            eventDtoOut.setViews(stats.get(0).getHits());
+        } else {
+            eventDtoOut.setViews(0L);
+        }
         return eventDtoOut;
+
     }
 
     @Override
